try to fix "Punkt hinzufügen" visual bug on mobile -v10

--- a/src/app/admin-components/bugapoint-management/bugapointmenu/bugapointmenu.component.css
+++ b/src/app/admin-components/bugapoint-management/bugapointmenu/bugapointmenu.component.css
@@ -13,5 +13,5 @@ button {
 }
 
 #bugapointmenu {
-  height: calc(100vh - 240px);
+  height: calc(100vh - 400px);
 }
